test/tests/compiler/5_local_variables/valid/use_assignment_result.plx
pub fn main(none) i32 {

    a: i32 = 1
    b: i32 = 2
    return a = b = 4
}

