test/tests/compiler/5_local_variables/invalid_semantics/redefine.plx
pub fn main(none) i32 {
    a: i32 = 1
    a: i32 = 2
    return a
}
